# BoutiqueRumble

./: .cursorrules  .gitignore  CMakeLists.txt  Memories.md  README.md  installer_win.iss  make_installer.ps1
.github/workflows/: build.yml
Presets/: 00 - Default Rumble  01 - Bass 5th Heaven  02 - Bass 5th Wobblemania  03 - Bass 5thuptown  04 - Bass 8ths Movement  05 - Bass Ace  06 - Bass Bitty Betty  07 - Bass Broken Line  08 - Bass Fuzzy Fun  09 - Bass Gamorse  10 - Bass Glitch Bissh  11 - Bass Layer Mash Potatoes  12 - Bass Phase Monster Light  13 - Bass Pulsey Pulsey  14 - Bass Sawtooth Classic  15 - Bass Sawtooth Filthy  16 - Bass Side Chain Swing  17 - Bass Sine Filth  18 - Bass Solid  19 - Bass Solid Fuzz  20 - Bass Solid Fuzzness  21 - Bass Solid Wobble Sub  22 - Harm Maj3rd Super Mario  23 - Harm Maj3rd Warmth  24 - Harm Min3rd Saw Warmth  25 - Harm Min3rd Square Warmth  26 - Harm Min3rd Super Mario  27 - Lead 8bit Parade  28 - Lead Bippy Blow  29 - Lead Dull Droplets  30 - Lead Mids Warmth Wobble  31 - Lead Vintage Voltage  32 - Sub 8ths Wobble  33 - Sub 16th Wobble
Source/: Oscillator.h  PluginEditor.cpp  PluginEditor.h  PluginProcessor.cpp  PluginProcessor.h  entitlements.plist
Source/DSP/: BrakePhysics.h  MotifEngine.h  Oscillator.h  RumbleEngine.h  SignalProcessor.h  VoiceBank.h
Source/Parameters/: ParamConstants.h
Source/UI/: BoutiqueLookAndFeel.cpp  BoutiqueLookAndFeel.h
Source/Utils/: SlewLimiter.h
Tests/: BrakePhysicsTests.cpp  EngineTests.cpp  MotifEngineTests.cpp  OscillatorTests.cpp  SignalProcessorTests.cpp  SlewTests.cpp
